--- a/_posts/2015-12-21-BIP-141-143-144-145-173.markdown
+++ b/_posts/2015-12-21-BIP-141-143-144-145-173.markdown
@@ -2,6 +2,6 @@
 layout: default
 date: 2015-12-21  
 photo: 141-143-144-145-173.png
-caption_header: BIP-141,143,144,145 and 173
+caption_header: Segwit BIPs- 141, 143, 144, 145 and 173 
 caption: Eric Lombrozo, Johnson Lau, Pieter Wuille, Luke Dashjr and Greg Maxwell 
 ---
