crop BIP 39 large image and edit BIP 84 caption_header

--- a/_posts/2017-12-28-BIP84.markdown
+++ b/_posts/2017-12-28-BIP84.markdown
@@ -2,6 +2,6 @@
 layout: default
 date: 2017-12-28  
 photo: 84.png
-caption_header: Derivation scheme for P2WPKH based accounts 
+caption_header: BIP 84 - Derivation scheme for P2WPKH based accounts 
 caption: Pavol Rusnakl 
 ---
